add other titlebar buttons :)

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
                 <div class='titlebar'>
                     <p class='title'>Beer counter</p>
                 </div>
-                <button class='titlebar-btn' id='close-btn'></button>
+                <button class='titlebar-btn min-btn' id='min-btn'></button>
+                <button class='titlebar-btn max-btn' id='max-btn'></button>
+                <button class='titlebar-btn cross-btn' id='close-btn'></button>
             </div>
 
             <div class='center'>
@@ -35,8 +37,8 @@
 
         </div>
 
-        <script src='picker.js'></script>
-        <script src='beer.js'></script>
-        <script src='buttons.js'></script>
+        <script src='js/picker.js'></script>
+        <script src='js/beer.js'></script>
+        <script src='js/buttons.js'></script>
     </body>
 </html>
