quick title position fix

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
         <div class='container'>
             
             <div class='line-container'>
-                <div class='titlebar'>
-                    <p class='title'>Beer counter</p>
-                </div>
+                <p class='title'>Beer counter</p>
+                <div class='titlebar'></div>
                 <button class='titlebar-btn min-btn' id='min-btn'></button>
                 <button class='titlebar-btn max-btn' id='max-btn'></button>
                 <button class='titlebar-btn cross-btn' id='close-btn'></button>
