move gradient render to javascript

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 
         </div>
 
+        <script src='js/graphics.js'></script>
         <script src='js/picker.js'></script>
         <script src='js/beer.js'></script>
         <script src='js/buttons.js'></script>
