--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <link rel='stylesheet' href='index.css'>
     </head>
     <body>
-        <div class='container'>
+        <div class='container' id='container'>
             
             <div class='line-container'>
                 <p class='title'>Beer counter</p>
