--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset='UTF-8'>
@@ -36,6 +36,7 @@
 
         </div>
 
+        <script src='js/confetti.js'></script>
         <script src='js/graphics.js'></script>
         <script src='js/picker.js'></script>
         <script src='js/beer.js'></script>
